# copy-perps

./: .env.example  .gitignore  CLAUDE.md  README.md  drizzle.config.ts  instrumentation.ts  middleware.ts  next.config.ts  package-lock.json  package.json  railway.crank.json  railway.json  tsconfig.json  vercel.json  vitest.config.ts
.claude/: launch.json
app/: globals.css  layout.tsx  page.tsx
arena-program/: .gitignore  Anchor.toml  PINS.md  package-lock.json  package.json
arena-program/programs/arena/: Cargo.toml
arena-program/programs/arena/src/: candles.rs  lib.rs  oracle.rs  paper.rs  paper_llm.rs  state.rs  strategy.rs
docs/: architecture.md
lib/: analytics.test.ts  analytics.ts  client-features.test.ts  client-features.ts  features.test.ts  features.ts  mock-data.ts  types.ts
pitch/: gwak-buy.html  gwak-mockup.html  gwak-pulse.html  gwak-scalp.html  gwak-win.html  record.mjs
public/: manifest.json  offline.html  sw.js
scripts/: _apply-boundat-nullable.ts  _bot-report.ts  _create-session-keys-table.mjs  _create-watchlist-table.ts  _demo-open-lizard.ts  _probe-hl-liquidations.mjs  _probe-predictions.ts  _probe-v2-live-readout.mjs  _probe-v2-open-fee.mjs  _probe-v2-owner.mjs  _probe-v2-position.mjs  _probe-wallet-balance.mjs  _probe-whale-pool.ts  _probe-whale-windows.ts  _test-bet.mjs  _test-jupusd-to-usdc.mjs  _test-perp-close.mjs  _test-perp.mjs  _test-prediction-close.mjs  _test-readperp.mjs  _test-wallet.mjs  add-bots.ts  apply-notifications-ddl.ts  apply-portfolio-snapshots.ts  apply-pulse-social.ts  apply-user-profiles.ts  apply-whale-reactions-ddl.ts  backfill-narrations.ts  backfill-prediction-pnl.mjs  check-narrations.ts  create-waitlist-table.mjs  drift-probe.ts  export-mock.mjs  (+27 more)
(+825 files in other folders)
