[package]
name = "arena"
version = "0.1.0"
description = "On-chain bot arena program (MagicBlock ER)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "arena"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
# Pins are SETTLED — see arena-program/PINS.md (Spike A PASS, 2026-06-11).
anchor-lang = "1.0.2"
ephemeral-rollups-sdk = { version = "0.14.3", features = ["anchor"] }
